src/assets/_card.scss
.card-group {
  margin-bottom: 32px;

  > .card {
    margin-bottom: 24px;
  }
}

@media only screen and (min-width: 768px) {
  .normal {
    display: flex;
    flex-flow: row wrap;

    > .card {
      position: relative;
      flex: 1 0 0%;
      margin-bottom: 0;
      margin-right: 15px;
      margin-bottom: 0;
      margin-left: 15px;
      min-width: 0;
    }
  }

  .deck {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
    gap: 30px;
    align-items: stretch;

    > .card {
      display: flex;
      flex-direction: column;
      margin-bottom: 0;
      height: 100%;
      min-width: 0;
    }
  }

  .columns {
    column-gap: 1.25rem;
    orphans: 1;
    widows: 1;
    column-count: 3;

    > .card {
      display: inline-block;
      width: 100%;
      flex-direction: column;
      margin-bottom: 0.75rem;
    }
  }
}

